add housing controller and edit create/edit housing forms

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,11 +28,11 @@
             <a href="/">Home</a>
             <ul>
                 <!-- Guest users and Logged users -->
-                <li><a href="/offers/all">Housing for rent</a></li>
+                <li><a href="/housing/all">Housing for rent</a></li>
 
                 {{#if user}}
                 <!-- Logged users -->
-                    <li><a href="/offers/create">Create offer</a></li>
+                    <li><a href="/housing/create">Create offer</a></li>
                     <li><a href="/search">Search</a></li>
                     <li><a href="/logout">Logout</a></li>
                 {{else}}
